# AgentMemoryManager

./: .coveragerc  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agent_memory_manager/: __init__.py  config.py  manager.py
agent_memory_manager/backends/: __init__.py  base.py  chroma.py  in_memory.py  pgvector.py  qdrant.py  sqlite.py
agent_memory_manager/embedders/: __init__.py  base.py  local_embedder.py  ollama_embedder.py  openai_embedder.py
agent_memory_manager/integrations/: __init__.py  langchain.py  llamaindex.py
agent_memory_manager/llm/: __init__.py  anthropic.py  base.py  openai.py
agent_memory_manager/memory/: __init__.py  graph_extractor.py  graph_store.py  semantic_memory.py  user_profile_store.py
agent_memory_manager/models/: __init__.py  entity.py  memory_record.py  message.py  results.py  user_profile.py
agent_memory_manager/server/: __init__.py  app.py  entrypoint.py  schemas.py
agent_memory_manager/strategies/: __init__.py  atomic_facts.py  base.py  pipeline.py  reflection.py  sliding_window.py  streaming.py  summarize.py  zettelkasten.py
agent_memory_manager/utils/: __init__.py  json_utils.py  prompts.py  scoring.py  token_counter.py
docs/: 01_技术调研报告.md  02_需求文档.md  03_开发文档.md  interview_five_questions.md  interview_prep.md
examples/: advanced_pipeline.py  quickstart.py
scripts/: setup_github_project.py
tests/: doubao_test.py  ollama_test.py
tests/benchmarks/: compression_benchmark.py  eval_framework.py
tests/unit/: test_atomic_facts.py  test_backends.py  test_chroma_backend.py  test_graph_extractor.py  test_graph_store.py  test_json_utils.py  test_manager.py  test_manager_user.py  test_models.py  test_ollama_embedder.py  test_pgvector.py  test_qdrant_backend.py  test_reflection.py  test_scoring.py  test_semantic_memory.py  test_server.py  test_strategies.py  test_streaming.py  test_summarize.py  test_token_counter.py  test_user_profile.py  test_zettelkasten.py
