[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-memory-manager"
version = "0.1.0"
description = "Pluggable memory management for LLM agents — solving context degradation in long conversations"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["llm", "agent", "memory", "context", "rag", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "aiosqlite>=0.19.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
chroma = ["chromadb>=0.5.0"]
qdrant = ["qdrant-client>=1.10.0"]
pgvector = ["asyncpg>=0.29.0", "pgvector>=0.3.0"]
neo4j = ["neo4j>=5.20.0"]
langchain = ["langchain>=0.3.0", "langchain-core>=0.3.0"]
llamaindex = ["llama-index>=0.11.0"]
local = ["sentence-transformers>=3.0.0"]
all = [
    "agent-memory-manager[chroma,qdrant,pgvector,neo4j,langchain,llamaindex,local]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/codesknight/AgentMemoryManager"
Repository = "https://github.com/codesknight/AgentMemoryManager"
Issues = "https://github.com/codesknight/AgentMemoryManager/issues"
Documentation = "https://github.com/codesknight/AgentMemoryManager/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["agent_memory_manager"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
